# feup-aeda-project

./: .gitattributes  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md
generate-data/: CMakeLists.txt  README.md  con1.txt  condominio.txt  condominio_format.txt  condominos_format.txt  last_names.txt  main.cpp  mem1.txt
generate-data/classes/: Condominio.cpp  Condominio.h  Condomino.cpp  Habitacao.cpp  Habitacao.h  Servico.cpp  utils.h
parte1/: CMakeLists.txt  README.md  condominio.txt  condominio_format.txt  condominos.txt  main.cpp  menus.cpp  menus.h
parte1/classes/: Condominio.cpp  Condominio.h  Condomino.cpp  Condomino.h  Habitacao.cpp  Habitacao.h  Morada.cpp  Morada.h  Servico.cpp  Servico.h
parte1/documentacao/html/: _condominio_8h_source.html  _condomino_8h_source.html  _habitacao_8h_source.html  _morada_8h_source.html  _servico_8h_source.html  annotated.html  class_apartamento-members.html  class_apartamento.html  class_condominio-members.html  class_condominio.html  class_condomino-members.html  class_condomino.html  class_habitacao-members.html  class_habitacao.html  class_morada-members.html  class_morada.html  class_no_such_condomino-members.html  class_no_such_condomino.html  class_no_such_habitation-members.html  class_no_such_habitation.html  class_no_such_service-members.html  class_no_such_service.html  class_servico-members.html  class_servico.html  class_vivenda-members.html  class_vivenda.html  classes.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_4c29f6c5e99ca759d1475628ee9d55fb.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_b02e4219757ae4e3a0f1714873865bbf.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f942a7a73394fda25d4213a70555b3f8.html  (+10 more)
parte2/: CMakeLists.txt  Doxyfile  README.md  con1.txt  con2.txt  con3.txt  condominos.txt  former1.txt  main.cpp  mem1.txt  mem2.txt  mem3.txt  menus.cpp  menus.h  output-formats.cpp  output-formats.h  tr1.txt  tr2.txt  tr3.txt
parte2/classes/: CAgency.cpp  CAgency.h  Condominio.cpp  Condominio.h  Condomino.cpp  Condomino.h  Habitacao.cpp  Habitacao.h  Servico.h  Transporte.cpp  Transporte.h  utils.cpp  utils.h
parte2/example_files/: con1.txt  former1.txt  mem1.txt  tr1.txt
(+41 files in other folders)
